// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLinkBox /> renders ButtonLinkBox 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-testid="root-test"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      className="button-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "button-test",
          },
        }
      }
      href="button-url"
      rel="nofollow"
      target="_self"
      theme="purple"
    >
      button title
    </Button>
  </div>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      className="link-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test",
          },
        }
      }
      href="link-url"
      rel="nofollow"
      target="_blank"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox with download links 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-testid="root-test"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      className="button-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "button-test",
          },
        }
      }
      download={true}
      href="button-url"
      rel="nofollow"
      target="_self"
      theme="purple"
    >
      button title
    </Button>
  </div>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      className="link-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test",
          },
        }
      }
      download={true}
      href="link-url"
      rel="nofollow"
      target="_blank"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without button 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-testid="root-test"
>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      className="link-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test",
          },
        }
      }
      href="link-url"
      rel="nofollow"
      target="_blank"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without link 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class root-class"
  data-testid="root-test"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      className="button-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "button-test",
          },
        }
      }
      href="button-url"
      rel="nofollow"
      target="_self"
      theme="purple"
    >
      button title
    </Button>
  </div>
</div>
`;
